Added media queries

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 </head>
 <body>
   <main role="main">
-    <article class="container-fluid card rounded-4">
-      <img src="/assets/images/image-omelette.jpeg" class="card-img-top rounded-4" alt="recipe image" id="recipe-img">
+    <article class="container-fluid card rounded-4 d-flex justify-content-center align-items-center min-vh-100" >
+      <img src="/assets/images/image-omelette.jpeg" class="card-img-top" alt="recipe image" id="recipe-img">
       <div class="card-body">
         <h1 class="card-title">Simple Omelette Recipe</h1>
         <p class="card-text">An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked 
